kubernetes/media/overseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: media
  labels:
    app.kubernetes.io/name: overseerr
spec:
  ports:
    - name: http
      port: 5055
      targetPort: http
  selector:
    app.kubernetes.io/name: overseerr
