kubernetes/media/overseerr/ingress-internal.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seerr-internal
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`seer.home.mcnees.me`)
      kind: Rule
      services:
        - name: overseerr
          port: 5055
  tls:
    secretName: legacy-home-wildcard-tls
