kubernetes/media/overseerr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: overseerr
  namespace: media
spec:
  entryPoints:
    - websecure-external
  routes:
    - match: Host(`requests.mcnees.me`) || Host(`requests-k8s.mcnees.me`)
      kind: Rule
      services:
        - name: overseerr
          port: 5055
  tls:
    secretName: legacy-public-wildcard-tls
